fixed card shadow

--- a/src/components/grid/grid.module.scss
+++ b/src/components/grid/grid.module.scss
@@ -35,6 +35,6 @@
   transition: 1.25s ease;
 
   &:hover {
-    box-shadow: rgba(100, 100, 111, 0.1) 0px 5px 24px 0px;
+    box-shadow: none;
   }
 }
